# ArkAscendedServerManager

./: .env.example  .gitignore  AGENTS.md  ArkServerOptions.csv  ArkServerOptions.xlsx  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  changelog.sh  go.mod  go.sum  gradle.properties  lumo.properties  main.go  settings.gradle.kts  skills-lock.json  todo.txt  wails.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-docs.yml  main.yml  nightly.yaml  pull_request.yml  release.yml
Writerside/: aasm.tree  redirection-rules.xml  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: Ark-Ascended-Server-Manager.topic  (+5 more)
buildSrc/: build.gradle.kts
components/: build.gradle.kts
config/: config.go
core/: build.gradle.kts
core-native/: .gitignore  Cargo.toml  build.gradle.kts
docs/: developer-setup.md
frontend/: .prettierignore  index.html  package-lock.json  package.json  package.json.md5  tailwind.config.cjs
gradle/: libs.versions.toml
helpers/: app_update.go  asa_api.go  checks.go  discord.go  helpers.go  key.go  networking.go  rcon.go  updateServiceHelper.go
installer/: helpers.go  installer_controller.go
internal_api_interface/: internal_api_interface.go
logger/: logger.go
overseer/: Cargo.toml  build.gradle.kts
overseer/src/main/rust/src/: build.rs  main.rs  output_sanitizer.rs
server/: game.go  gus.go  helpers.go  server.go  server_controller.go  server_controller_werr.go
ui/: build.gradle.kts  proguard-rules.pro
(+217 files in other folders)
