[package]
name = "overseer"
version = "0.1.0"
edition = "2024"
publish = false
build = "src/main/rust/src/build.rs"

[[bin]]
name = "overseer"
path = "src/main/rust/src/main.rs"

[dependencies]
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
portable-pty = "0.8"

[build-dependencies]
winres = "0.1"